tests/specs/reexport_existing_export.txt
# mod.ts
export function foo(): void {}
export { foo as bar };

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export function foo(): void {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

function bar(): void

Defined in file:///mod.ts:0:1

function foo(): void


# output.json
[
  {
    "name": "foo",
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 0,
          "col": 0,
          "byteIndex": 0
        },
        "declarationKind": "export",
        "kind": "function",
        "def": {
          "params": [],
          "returnType": {
            "repr": "void",
            "kind": "keyword",
            "keyword": "void"
          },
          "hasBody": true,
          "isAsync": false,
          "isGenerator": false,
          "typeParams": []
        }
      }
    ]
  },
  {
    "name": "bar",
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 0,
          "col": 0,
          "byteIndex": 0
        },
        "declarationKind": "export",
        "kind": "function",
        "def": {
          "params": [],
          "returnType": {
            "repr": "void",
            "kind": "keyword",
            "keyword": "void"
          },
          "hasBody": true,
          "isAsync": false,
          "isGenerator": false,
          "typeParams": []
        }
      }
    ]
  }
]
